# Projeto-Django

django_project/: README.md  manage.py  pyproject.toml
django_project/aluraproject/: asgi.py  settings.py  urls.py  wsgi.py
django_project/receitas/: urls.py  views.py
django_project/receitas/templates/: base.html  index.html  receita.html
django_project/receitas/templates/partials/: footer.html
