[project]
name = "django-project"
version = "0.1.0"
description = ""
authors = [
    {name = "mnoellap",email = "pmnoella1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.5,<6.0.0)"
]

[tool.poetry]
packages = [{include = "django_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
